--- a/.github/workflows/docker.yml
+++ b/.github/workflows/docker.yml
@@ -10,6 +10,8 @@ jobs:
     steps:
       - name: Checkout
         uses: actions/checkout@v4
+      - name: build front-end
+      - run: npm run build
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v3
       - name: Build
