--- a/.github/workflows/docker.yml
+++ b/.github/workflows/docker.yml
@@ -18,7 +18,7 @@ jobs:
         with:
           context: .
           load: true
-          tags: myimage:latest
+          tags: pokedexf:latest
       - name: Inspect
         run: |
-          docker image inspect myimage:latest
+          docker image inspect pokedexf:latest
