--- a/.github/workflows/docker.yml
+++ b/.github/workflows/docker.yml
@@ -9,8 +9,8 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - name: Checkout
-        uses: actions/checkout@v4
-      - run: npm run build
+      - uses: actions/checkout@v4
+      - run: npm ci && npm run build
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v3
       - name: Build
