--- a/.github/workflows/docker.yml
+++ b/.github/workflows/docker.yml
@@ -5,20 +5,8 @@ on:
    types: [created]
 
 jobs:
-  docker:
+  build_and_deploy:
     runs-on: ubuntu-latest
     steps:
-      - name: Checkout
       - uses: actions/checkout@v4
       - run: npm ci && npm run build
-      - name: Set up Docker Buildx
-        uses: docker/setup-buildx-action@v3
-      - name: Build
-        uses: docker/build-push-action@v5
-        with:
-          context: .
-          load: true
-          tags: pokedexf:latest
-      - name: Inspect
-        run: |
-          docker image inspect pokedexf:latest
