--- a/.github/workflows/docker.yml
+++ b/.github/workflows/docker.yml
@@ -10,5 +10,11 @@ jobs:
     steps:
       - uses: actions/checkout@v4
       - run: npm ci && npm run build
-      - name: Build the Docker image
-      - run: docker build . --file Dockerfile --tag pokedex:$(date +%s)   
+      - name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v3
+      - name: Build
+        uses: docker/build-push-action@v5
+        with:
+          context: .
+          load: true
+          tags: pokedexf:master
