--- a/.github/workflows/docker-publish.yml
+++ b/.github/workflows/docker-publish.yml
@@ -36,7 +36,7 @@ jobs:
         uses: actions/checkout@v4
 
       - name: build with npm
-        run: npm run build
+        run: npm ci && npm run build
 
       # Install the cosign tool except on PR
       # https://github.com/sigstore/cosign-installer
